force-app/main/default/objects/Pontua_o_mensal__c/Pontua_o_mensal__c.object-meta.xml
<CustomObject>
    <label>Pontuação mensal</label>
    <nameField>
        <displayFormat>P - {000000}</displayFormat>
        <label>Número da Pontuação mensal</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pontuações mensais</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>