force-app/main/default/objects/Pontua_o_mensal__c/fields/Classifica_o__c.field-meta.xml
<CustomField>
    <fullName>Classifica_o__c</fullName>
    <formula>CASE(  Classifica_o_textual__c  , 
5, IMAGE(&quot;https://c.na2.content.force.com/servlet/servlet.ImageServer?id=01540000001Q4Ai&amp;oid=00D4D0000000bqM&amp;lastMod=1391433360000&quot;, &quot;5star&quot;, 25, 120), 
4, IMAGE(&quot;https://c.na2.content.force.com/servlet/servlet.ImageServer?id=01540000001Q4Ah&amp;oid=00D4D0000000bqM&amp;lastMod=1391433360000&quot;, &quot;4star&quot;, 25, 120), 
3, IMAGE(&quot;https://c.na2.content.force.com/servlet/servlet.ImageServer?id=01540000001Q4Ag&amp;oid=00D4D0000000bqM&amp;lastMod=1391433360000&quot;, &quot;3star&quot;, 25, 120), 
2, IMAGE(&quot;https://c.na2.content.force.com/servlet/servlet.ImageServer?id=01540000001Q4Af&amp;oid=00D4D0000000bqM&amp;lastMod=1391433360000&quot;, &quot;2star&quot;, 25, 120), 
1, IMAGE(&quot;https://c.na2.content.force.com/servlet/servlet.ImageServer?id=01540000001Q4Ae&amp;oid=00D4D0000000bqM&amp;lastMod=1391433360000&quot;, &quot;1star&quot;, 25, 120),
0, IMAGE(&quot;https://c.na2.content.force.com/servlet/servlet.ImageServer?id=01540000001Q4Ad&amp;oid=00D4D0000000bqM&amp;lastMod=1391433359000&quot;, &quot;0star&quot;, 25, 120), 
&quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classificação</label>
    <type>Text</type>
</CustomField>