force-app/main/default/objects/Pontua_o_mensal__c/fields/Classifica_o_textual__c.field-meta.xml
<CustomField>
    <fullName>Classifica_o_textual__c</fullName>
    <label>Classificação textual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>