force-app/main/default/objects/Pontua_o_mensal__c/fields/M_s_de_refer_ncia__c.field-meta.xml
<CustomField>
    <fullName>M_s_de_refer_ncia__c</fullName>
    <formula>MONTH(  DATEVALUE(CreatedDate) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mês de referência</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>