force-app/main/default/objects/Pontua_o_mensal__c/fields/Meta__c.field-meta.xml
<CustomField>
    <fullName>Meta__c</fullName>
    <label>Meta</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>