force-app/main/default/objects/Pontua_o_mensal__c/fields/Meta_de_pontuacao__c.field-meta.xml
<CustomField>
    <fullName>Meta_de_pontuacao__c</fullName>
    <label>Meta de pontuação</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>