force-app/main/default/objects/Pontua_o_mensal__c/fields/Meta_em_reais__c.field-meta.xml
<CustomField>
    <fullName>Meta_em_reais__c</fullName>
    <label>Meta em reais</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>