force-app/main/default/objects/Pontua_o_mensal__c/fields/Percentual_alcan_ado__c.field-meta.xml
<CustomField>
    <fullName>Percentual_alcan_ado__c</fullName>
    <label>Percentual alcançado</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>