force-app/main/default/objects/Pontua_o_mensal__c/fields/Pontos_de_assist_ncia__c.field-meta.xml
<CustomField>
    <fullName>Pontos_de_assist_ncia__c</fullName>
    <label>Pontos de assistência</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>