force-app/main/default/objects/Pontua_o_mensal__c/fields/Pontos_de_taxa__c.field-meta.xml
<CustomField>
    <fullName>Pontos_de_taxa__c</fullName>
    <label>Pontos de taxa</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>