force-app/main/default/objects/Pontua_o_mensal__c/fields/Pontua_o_alcan_ada__c.field-meta.xml
<CustomField>
    <fullName>Pontua_o_alcan_ada__c</fullName>
    <label>Pontuação alcançada</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>