force-app/main/default/objects/Pontua_o_mensal__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <length>60</length>
    <type>Text</type>
</CustomField>