force-app/main/default/objects/Pontua_o_mensal__c/fields/Total_contratado__c.field-meta.xml
<CustomField>
    <fullName>Total_contratado__c</fullName>
    <label>Total contratado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>