force-app/main/default/objects/Pontua_o_mensal__c/fields/Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Vendedor__c</fullName>
    <label>Vendedor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>