force-app/main/default/objects/Pontua_o_mensal__c/recordTypes/Pontua_o.recordType-meta.xml
<RecordType>
    <fullName>Pontua_o</fullName>
    <active>true</active>
    <label>Pontuação</label>
</RecordType>