force-app/main/default/objects/Pontua_o_mensal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vendedor__c</columns>
    <columns>M_s_de_refer_ncia__c</columns>
    <columns>Pontos_de_indicacao__c</columns>
    <columns>Pontos_de_oportunidade__c</columns>
    <columns>Pontos_de_taxa__c</columns>
    <columns>Pontos_de_assist_ncia__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>